# launcher723

./: .pre-commit-config.yaml  README.md  _build_local.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: example.ipynb  example.py  marimo_example.py  marimo_example_run.py
macos/: Info.plist  icon.icns  launch  launch.c  launch.sh
tests/: test_macos_launcher.py  test_windows_launcher.py
windows/: launcher.go  launcher_test.go
