[project]
name = "pyrunner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "prek>=0.3.5",
    "pytest>=8.0",
    "pyright>=1.1.392.post0",
    "ruff>=0.8.3",
    "rust-just>=1.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
fix = true
unsafe-fixes = true

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "T100", # no breakpoints
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

# pyright
[tool.pyright]
include = ["_build_local.py", "tests"]
pythonVersion = "3.10"
enableExperimentalFeatures = true
reportMissingImports = false
reportMissingModuleSource = false
verboseOutput = true
venv = ".venv"
